--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muletter",
-  "version": "0.1.2",
-  "description": "CLI newsletter for small mailing list",
+  "version": "0.1.3",
+  "description": "CLI newsletter for SMTP",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kimihub/muletter.git"
