--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "muletter",
-  "version": "0.1.6",
-  "description": "CLI newsletter for SMTP",
+  "version": "0.1.7",
+  "description": "CLI newsletter for SMTP server",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kimihub/muletter.git"
+    "url": "git+https://github.com/kimihub/muletter-cli.git"
   },
   "keywords": [
     "letter",
@@ -22,9 +22,9 @@
   "author": "Kimi",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/kimihub/muletter/issues"
+    "url": "https://github.com/kimihub/muletter-cli/issues"
   },
-  "homepage": "https://github.com/kimihub/muletter#readme",
+  "homepage": "https://github.com/kimihub/muletter-cli#readme",
   "preferGlobal": true,
   "bin": {
     "muletter": "muletter.js"
